@@ -4,6 +4,8 @@ Python Mode News
 New in version 5.2.0
 --------------------
 
+- Do not fill when calling fill-paragraph with point in a region of code.
+
 - Fixed font-locking of exception names in parenthesized lists.
 
 - Fixed font-locking of decorators with arguments.
